--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <hytml>
-<head></head>
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BW2LT8L53F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BW2LT8L53F');
+</script>
+
+</head>
 <body>
 <h1>WEB
 
 <ol>
-    <li>html</li>
+<li>html</li>
 <li>css</li>
 <li>javascript</li>
 </ol>
